# uni-rag

./: .dockerignore  .env.example  .gitignore  AGENT_ONBOARDING.md  CHANGELOG.md  CLAUDE.md  DEVLOG.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  pyproject.toml  run.py
.github/workflows/: docker.yml
.ship/: ship-auto.local.md
cli/: __init__.py  main.py
docs/: ARCHITECTURE.md  DELIVERY_V0_3_COMPLETE_2026-06-18.md  DELIVERY_V0_3_INTERRUPTED_2026-06-17.md  DEVLOG_2026-06-22.md  DEVLOG_2026-06-24.md  DEVLOG_2026-06-25.md  DEVLOG_2026-06-26.md  PRODUCT.md  QUALITY-PARALLEL-PLAN.md  UX_ITERATION_2026-06-18.md  design-preview.html  frontend-ux-research.md  product-strategy.md
frontend/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css  test-setup.ts
loops/eval/: RUN_IN_SESSION.md  loop.resolved.json  loop.yaml  run-loop.py
scripts/: make_fixtures.py  make_table_formula_fixture.py
src/uni_rag/: __init__.py  config.py  logging_setup.py
tests/: conftest.py
tests/bdd/: __init__.py  test_b1_b4.py  test_b8_b10.py  test_frontend_ux_quick_wins.py  test_link_extractor_e2e.py  test_video_extractors_e2e.py
tests/fixtures/: sample.md  sample_with_table_formula.docx
tests/integration/: test_api.py  test_citation_verifier.py  test_cli.py  test_docker_build.py  test_document_list.py  test_ingest_pipeline.py  test_modes.py  test_query_pipeline.py
tests/unit/: test_bm25.py  test_chunker.py  test_client.py  test_config.py  test_embedder.py  test_export.py  test_kb.py  test_locator.py  (+15 more)
(+131 files in other folders)
