[project]
name = "uni-rag"
version = "0.1.0"
description = "Universal RAG assistant for students"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.20",
    "pymupdf>=1.25",
    "python-docx>=1.1",
    "markdown-it-py>=3.0",
    "sentence-transformers>=3.3",
    "chromadb>=0.5",
    "rank-bm25>=0.2.2",
    "jieba>=0.42",
    "anthropic>=0.40",
    "typer>=0.15",
    "rich>=13.9",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "python-dotenv>=1.0",
    "weasyprint>=60.0",
    "trafilatura>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "pytest-cov>=6.0",
    "ruff>=0.8",
]

[project.scripts]
uni-rag = "cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uni_rag", "cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
